# ayatana-indicator-session

./: .build.yml  .bzrignore  .clang-format  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.md  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  build.sh  config.h.in  configure  configure.ac  format-code.sh  update-pot.sh
.github/workflows/: clang-format.yml
cmake/: Translations.cmake  UseGSettings.cmake
data/: CMakeLists.txt  Makefile.am  Makefile.in  ayatana-indicator-session.conf.in  ayatana-indicator-session.desktop.in  ayatana-indicator-session.service.in  ayatana-indicator-session.upstart.desktop.in  com.canonical.indicator.session  com.canonical.indicator.session.gschema.xml  com.canonical.indicator.session.gschema.xml.in  indicator-session-lock-screen.desktop.in.in  indicator-session-logout.desktop.in.in  indicator-session-restart.desktop.in.in  indicator-session-shutdown.desktop.in.in  indicator-session.conf.in  indicator-session.convert  indicator-session.desktop.in  indicator-session.schemas.in  indicator-session.service.in  indicator-status.service.in  indicator-users.service.in  org.ayatana.indicator.session  org.ayatana.indicator.session.gschema.xml  org.ayatana.indicator.session.gschema.xml.in  session.indicator
data/extra-sessions/: Makefile.am  Makefile.in  classic-desktop.desktop  classic-desktop.desktop.in  classic-desktop.desktop.in.in
data/icons/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.in
data/icons/16x16/actions/: Makefile.am  Makefile.in
data/icons/16x16/status/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/22x22/actions/: Makefile.am  Makefile.in
data/icons/22x22/status/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.in
data/icons/24x24/actions/: Makefile.am  Makefile.in
data/icons/24x24/status/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.in
data/icons/32x32/actions/: Makefile.am  Makefile.in
data/icons/32x32/status/: Makefile.am  Makefile.in
data/icons/48x48/status/: Makefile.am
data/icons/scalable/: Makefile.in
data/icons/scalable/actions/: Makefile.am  Makefile.in
data/icons/scalable/status/: Makefile.am  Makefile.in
debian/: ayatana-indicator-session.links  changelog  control  copyright  copyright.in  postinst  rules  watch
debian/patches/: 01-remove-dead-gss-handling.patch  01_locking_on_autologin.patch  01_polkit-1.patch  01_port_to_upower.patch  02_mc5-fixes.patch  03_tp_glib.patch  99_autoreconf.patch  fix-session-menu-without-gdm.patch  restore_lock_screen.patch  restore_session_lock.patch  revert_icon_change.patch  series  switch_user_lp-444494.patch
debian/tests/: control  start-service
po/: LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-session.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  (+97 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  accounts-service-client.h  accounts-service-user-client.h  actions.c  actions.h  apt-transaction.c  apt-transaction.h  apt-watcher.c  apt-watcher.h  backend.h  dbus-accounts.c  dbus-accounts.h  dbus-consolekit-manager.c  dbus-consolekit-manager.h  dbus-consolekit-seat.c  dbus-consolekit-seat.h  dbus-consolekit-session.c  dbus-consolekit-session.h  dbus-display-manager.c  dbus-display-manager.h  dbus-shared-names.h  dbus-upower.c  dbus-upower.h  dbus-user.c  dbus-user.h  device-menu-mgr.c  device-menu-mgr.h  dialog.c  display-manager.xml  gconf-helper.c  gconf-helper.h  gen-session-dbus.xml.c  gtk-logout-helper.c  guest.c  guest.h  indicator-fusa.c  indicator-messages.c  indicator-session.c  (+56 more)
src/backend-dbus/: CMakeLists.txt  actions.c  actions.h  backend-dbus.c  backend-dbus.h  com.lomiri.Shell.Session.xml  com.lomiri.indicators.webcredentials.xml  guest.c  guest.h  org.ayatana.Desktop.Session.xml  org.ayatana.indicators.webcredentials.xml  org.freedesktop.ConsoleKit.Seat.xml  org.gnome.ScreenSaver.xml  users.c  users.h  utils.c  utils.h
src/gtk-dialog/: Makefile.am  ck-pk-helper.c  ck-pk-helper.h  dialog.c  dialog.h  gconf-helper.c  gconf-helper.h  gtk-logout-helper.c  logout-dialog.c  logout-dialog.h
tests/: CMakeLists.txt  Makefile.am  Makefile.in  ayatana-indicator-session.service.in  backend-mock-actions.c  backend-mock-actions.h  backend-mock-guest.c  backend-mock-guest.h  backend-mock-users.c  backend-mock-users.h  backend-mock.c  backend-mock.h  com.canonical.indicator.session.backendmock.gschema.xml  com.canonical.indicator.session.gschema.xml  gtest-dbus-fixture.h  gtest-dbus-helper.h  indicator-session.service.in  manual  org.ayatana.indicator.session.backendmock.gschema.xml  org.ayatana.indicator.session.gschema.xml  org.gnome.desktop.lockdown.gschema.xml  org.gnome.settings-daemon.plugins.media-keys.gschema.xml  test-service.cc
tests/backend-dbus/: CMakeLists.txt  gtest-mock-dbus-fixture.h  mock-accounts.cc  mock-accounts.h  mock-consolekit-manager.cc  mock-consolekit-manager.h  mock-consolekit-seat.cc  mock-consolekit-seat.h  mock-consolekit-session.cc  mock-consolekit-session.h  mock-display-manager-seat.cc  mock-display-manager-seat.h  mock-end-session-dialog.cc  mock-end-session-dialog.h  mock-login1-manager.cc  mock-login1-manager.h  mock-login1-seat.cc  mock-login1-seat.h  mock-lomiri-session.cc  mock-lomiri-session.h  mock-object.h  mock-screen-saver.h  mock-session-manager.h  mock-unity-session.cc  mock-unity-session.h  mock-upower.cc  mock-upower.h  mock-user.cc  mock-user.h  mock-webcredentials.cc  mock-webcredentials.h  test-actions.cc  test-guest.cc  test-users.cc
